--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,329 @@
-welcome to chinesevegansociety
+  <div class="site">
+  <div class="site-container">    
+    <div id="skip-link">
+      <a href="#main-content" class="element-invisible element-focusable">Skip to main content</a>
+    </div>
+        <header class="site-header" id="sticky-header">
+    <div class="skew">
+        <div class="container">
+
+          <a href="/" class="site-logo">
+              <img src="/sites/all/themes/the_vegan_society/assets/images/logo.png" alt="The Vegan Society" />
+          </a>
+          <a href="#" class="mobile-nav">
+              <img src="/sites/all/themes/the_vegan_society/assets/images/icons/nav.png" alt="Mobile Nav" />
+          </a>
+          <a href="/search" class="site-search">
+              <img src="/sites/all/themes/the_vegan_society/assets/images/icons/search.png" alt="Search" />
+          </a>
+
+                    
+                    <div class="user-login">
+                          <a href="/user">My Account</a>
+                      </div>
+          
+                      <div class="site-nav">
+              <ul class="site-nav__item"><li class="menu-1092 first"><a href="/whats-new" title="">What&#039;s New?</a></li>
+<li class="menu-1027"><a href="/try-vegan" title="">Try vegan</a></li>
+<li class="menu-1034"><a href="/take-action" title="">Take action</a></li>
+<li class="menu-1046"><a href="/resources" title="">Resources</a></li>
+<li class="menu-1060"><a href="/your-business" title="">Your Business</a></li>
+<li class="menu-1066"><a href="/society" title="">The Society</a></li>
+<li class="menu-1150 active-trail last active"><a href="/shop" title="" class="active-trail active">Shop</a></li>
+</ul>            </div> <!-- /#main-menu -->
+          
+
+        </div>
+    </div>
+</header> <!-- /.section, /#header -->
+
+
+<header class="page-title" style="background-image: url('http://www.vegansociety.com/sites/default/files/shop_0.jpg');">
+  <div class="skew">
+      <div class="container">
+                            <h1>
+          Shop          
+        </h1>
+                          </div>
+  </div>
+</header>
+<section class="page">  
+    <div class="container">
+        <div class="page-content">
+
+                        
+            <div class="custom-breadcrumbs">
+                <h2 class="element-invisible">You are here</h2><div class="breadcrumb"><a href="/">Home</a></div> » Shop            </div>
+            
+            <div class="block-list list2 shop-list">
+                                  <div class="region region-content">
+    
+
+<div id="node-9" class="node node-list-shop node-promoted node-full clearfix" about="/shop" typeof="sioc:Item foaf:Document">
+
+
+
+  <div class="content clearfix">
+    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><h2>Safe shopping</h2>
+<ul><li>For maximum security our web shop uses <a href="http://www.visa.co.uk/products/protection-benefits/verified-by-visa/" target="_blank">Verified by Visa</a>.</li>
+<li>Please <a href="/society/contact-us" target="_blank">contact</a> us if you experience any technical problems and we'll try and resolve them ASAP.</li>
+<li>Returning users note: account logins are no longer required to purchase online.</li>
+</ul></div></div></div>
+
+  <div class="block-list__panel">
+      <div class="block-list__image">
+        <a href="/shop/accessories"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Accessories.jpg" width="419" height="204" alt="" /></a>     </div>  
+<h2 class="block-list__title">
+  <a href="/shop/accessories">Accessories</a></h2>  
+<div class="block-list__excerpt">
+  </div>  </div>
+  <div class="block-list__panel">
+      <div class="block-list__image">
+        <a href="/shop/bags"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Bags.jpg" width="419" height="204" alt="" /></a>     </div>  
+<h2 class="block-list__title">
+  <a href="/shop/bags">Bags</a></h2>  
+<div class="block-list__excerpt">
+  </div>  </div>
+  <div class="block-list__panel">
+      <div class="block-list__image">
+        <a href="/shop/books"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Vegan%20Cooking.jpg" width="419" height="204" alt="" /></a>     </div>  
+<h2 class="block-list__title">
+  <a href="/shop/books">Books</a></h2>  
+<div class="block-list__excerpt">
+  </div>  </div>
+  <div class="block-list__panel">
+      <div class="block-list__image">
+        <a href="/shop/charts"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Charts.jpg" width="419" height="204" alt="" /></a>     </div>  
+<h2 class="block-list__title">
+  <a href="/shop/charts">Charts</a></h2>  
+<div class="block-list__excerpt">
+  </div>  </div>
+  <div class="block-list__panel">
+      <div class="block-list__image">
+        <a href="/shop/clothing"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Clothing.jpg" width="419" height="204" alt="" /></a>     </div>  
+<h2 class="block-list__title">
+  <a href="/shop/clothing">Clothing</a></h2>  
+<div class="block-list__excerpt">
+  </div>  </div>
+  <div class="block-list__panel">
+      <div class="block-list__image">
+        <a href="/shop/donations"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Donate_724x352.jpg" width="724" height="352" alt="" /></a>      </div>  
+<h2 class="block-list__title">
+  <a href="/shop/donations">Donate now</a></h2> 
+<div class="block-list__excerpt">
+  </div>  </div>
+  <div class="block-list__panel">
+      <div class="block-list__image">
+        <a href="/shop/magazines"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/TV_Magazines_419x207.jpg" width="419" height="207" alt="" /></a>      </div>  
+<h2 class="block-list__title">
+  <a href="/shop/magazines">Magazines</a></h2>  
+<div class="block-list__excerpt">
+  </div>  </div>
+  <div class="block-list__panel">
+      <div class="block-list__image">
+        <a href="/shop/membership"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Membership%20Category%201.jpg" width="419" height="204" alt="" /></a>      </div>  
+<h2 class="block-list__title">
+  <a href="/shop/membership">Membership</a></h2>  
+<div class="block-list__excerpt">
+  </div>  </div>
+  <div class="block-list__panel">
+      <div class="block-list__image">
+        <a href="/shop/personal"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Personal.jpg" width="419" height="204" alt="" /></a>     </div>  
+<h2 class="block-list__title">
+  <a href="/shop/personal">Personal</a></h2>  
+<div class="block-list__excerpt">
+  </div>  </div>
+  <div class="block-list__panel">
+      <div class="block-list__image">
+        <a href="/shop/supplements"><img typeof="foaf:Image" src="http://www.vegansociety.com/sites/default/files/Supplements.jpg" width="419" height="204" alt="" /></a>     </div>  
+<h2 class="block-list__title">
+  <a href="/shop/supplements">Supplements</a></h2>  
+<div class="block-list__excerpt">
+  <h2>VEG1 price increase</h2> <p>As of <strong>1st July 2014</strong> the price of VEG1 90s will be increased slightly to <strong>£5.98</strong> and...<a href="/shop/supplements" class="more-link">(Read More)</a></p></div> </div>
+  </div>
+
+  
+  
+</div>
+  </div>
+            </div>
+        </div>
+
+        <aside class="page-sidebar--right">
+                          <div class="sub-nav"> 
+      <div class="region region-sidebar-menu">
+      <h2>Shop</h2>
+
+<div class="menu-block-wrapper menu-block-1 menu-name-main-menu parent-mlid-0 menu-level-2">
+  <ul class="menu clearfix"><li class="first leaf menu-mlid-1152"><a href="/shop/accessories" title="">Accessories</a></li>
+<li class="collapsed menu-mlid-1153"><a href="/shop/bags" title="">Bags</a></li>
+<li class="leaf menu-mlid-1158"><a href="/shop/books" title="">Books</a></li>
+<li class="leaf menu-mlid-1162"><a href="/shop/charts" title="">Charts</a></li>
+<li class="collapsed menu-mlid-1163"><a href="/shop/clothing" title="">Clothing</a></li>
+<li class="leaf menu-mlid-2387"><a href="/shop/donations" title="">Donate now</a></li>
+<li class="leaf menu-mlid-1772"><a href="/shop/magazines" title="">Magazines</a></li>
+<li class="leaf menu-mlid-2386"><a href="/shop/membership" title="">Membership</a></li>
+<li class="leaf menu-mlid-1166"><a href="/shop/personal" title="">Personal</a></li>
+<li class="last leaf menu-mlid-1167"><a href="/shop/supplements" title="">Supplements</a></li>
+</ul></div>
+  </div>
+  </div>
+<div class="banner__panel">
+      <div class="region region-sidebar-banners">
+    <div id='banner'><a class='link' href='/shop/supplements'><img class='jpg' alt='The Vegan Shop' src='http://www.vegansociety.com/sites/default/files/banners/VEG1_426_new.png'></a></div>  </div>
+</div>        </aside>
+
+    </div>   
+</section>
+
+<section class="info-social">
+  <div class="skew">
+    <div class="container">
+      <div class="info-social__grid">
+        <div class="info-social__panel">
+          <div class="latest-news">
+            <h2><a href="/whats-new/news">Latest News</a></h2>
+                              <div class="region region-footer-firstcolumn">
+    
+<div class="view view-latest-information view-id-latest_information view-display-id-block view-dom-id-b08f8eec2a7ce828178073d853646d0b">
+        
+  
+  
+      <div class="view-content">
+       <div>
+      
+          <a href="/node/104/what-can-you-do-24-hours">What can you do in 24 hours?</a>    </div>
+  <div>
+      
+          <a href="/node/104/product-recall-alert">Product Recall Alert</a>    </div>
+  <div>
+      
+          <a href="/node/104/successful-egm-2014">Successful EGM 2014</a>    </div>
+  <div>
+      
+          <a href="/node/104/run-vegan-fall-love-veganism">Run vegan &amp; fall in love with veganism</a>    </div>
+  <div>
+      
+          <a href="/node/104/volunteers-week-1-7-june">Volunteer&#039;s Week (1-7 June)</a>    </div>
+    </div>
+  
+  
+  
+  
+  
+  
+</div>  </div>
+                      </div>
+        </div>
+        <div class="info-social__panel">
+          <div class="upcoming-events">
+              <h2><a href="/whats-new/events">Upcoming Events</a></h2>
+                                  <div class="region region-footer-secondcolumn">
+    
+<div class="view view-upcoming-events view-id-upcoming_events view-display-id-block view-dom-id-1379eacab2a5c4e5967b5700066c1023">
+        
+  
+  
+      <div class="view-content">
+       <div>
+      
+          <span class="date-display-single" property="dc:date" datatype="xsd:dateTime" content="2014-09-27T00:00:00+01:00">Saturday, 27 September, 2014</span>    
+          <a href="/whats-new/events/london-vegfest-0">London VegFest</a>    </div>
+    </div>
+  
+  
+  
+  
+  
+  
+</div>  </div>
+                        </div>
+        </div>
+        <div class="info-social__panel">
+          <h2 class="info-social__title--large">
+            Ready?
+          </h2>
+          <div class="social-media">
+            <a href="https://twitter.com/TheVeganSociety" target="_blank" class="social-media__icon twitter">
+              Twitter
+            </a>
+            <a href="https://www.facebook.com/TheVeganSociety" target="_blank" class="social-media__icon facebook">
+              Facebook
+            </a>
+            <a href="https://plus.google.com/106749689060212010539/posts" target="_blank" class="social-media__icon google-plus">
+              Google Plus
+            </a>
+            <a href="http://www.youtube.com/user/TheVeganSociety" target="_blank" class="social-media__icon you-tube">
+              You Tube
+            </a>
+            <a href="http://instagram.com/theoriginalvegansociety" target="_blank" class="social-media__icon instagram">
+              Instagram
+            </a>
+          </div>
+
+          
+            <div id="mc_embed_signup">
+                                <form action="/sites/all/themes/the_vegan_society/mailchimp-signup.php" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="newsletter-signup validate">
+                    <div id="editrow-email-3" class="mc-field-group">
+                        <label for="mce-EMAIL" class="newsletter-signup__title">Keep updated with our newsletter:</label>
+                        <input class="newsletter-signup__input" type="email" placeholder="Your Email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                    </div>
+
+                    <div id="mce-responses" class="clear">
+                        <div class="response" id="mce-error-response" style="display:none"></div>
+                        <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    
+
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_4314d5d15f23141a37adee604_c3de6c6324" value=""></div>
+
+
+                    <input accesskey="S" class="button newsletter-signup__button" type="submit" value="Go!" name="subscribe" id="mc-embedded-subscribe">
+                </form>
+            </div>
+          
+                  </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer class="site-footer">
+  <div class="skew">
+    <div class="container">
+              <a href="/" class="site-footer__logo">
+                  <img src="/sites/all/themes/the_vegan_society/assets/images/v-logo.png" alt="The Vegan Society" />
+              </a>
+              <nav class="footer-nav">
+                                          <div class="region region-footer">
+    <ul class="menu clearfix"><li class="first leaf"><a href="/sitemap" title="">Site Map</a></li>
+<li class="leaf"><a href="/privacy-cookie-policy" title="">Privacy &amp; Cookie Policy</a></li>
+<li class="last leaf"><a href="/society/contact-us" title="">Contact Us</a></li>
+</ul>  </div>
+                                </nav>
+              <span class="small-print">Reg. Charity No: 279228 Company Reg. No: 1468880</span>
+      <span class="small-print">Copyright © 1944 - 2014 The Vegan Society</span>
+    </div>
+  </div>
+</footer>
+
+
+        </div>
+
+
+
+
+    <div class="mobile-nav-list">
+
+                  <ul class="mobile-site-nav"><li class="menu-1092 first"><a href="/whats-new" title="">What&#039;s New?</a></li>
+<li class="menu-1027"><a href="/try-vegan" title="">Try vegan</a></li>
+<li class="menu-1034"><a href="/take-action" title="">Take action</a></li>
+<li class="menu-1046"><a href="/resources" title="">Resources</a></li>
+<li class="menu-1060"><a href="/your-business" title="">Your Business</a></li>
+<li class="menu-1066"><a href="/society" title="">The Society</a></li>
+<li class="menu-1150 active-trail last active"><a href="/shop" title="" class="active-trail active">Shop</a></li>
+</ul>            </div>    <script type="text/javascript" src="http://www.vegansociety.com/sites/default/files/js/js_Dpwj9_jdZx11LB9vWakYPT-NglBvlNPbjDg8kKHykyQ.js"></script>
+  
+
+    
+  </div>
