--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,64 +7,41 @@
 <html>
 <head>
   <title>Chinese Vegan Society</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link rel="shortlink" href="http://www.vegansociety.com/node/9" />
-  <link rel="canonical" href="http://www.vegansociety.com/shop" />
-  <meta property="og:type" content="article" />
-  <meta property="og:site_name" content="The Vegan Society" />
-  <link rel="shortcut icon" href="http://www.vegansociety.com/sites/default/files/favicon_0.ico" type="image/vnd.microsoft.icon" />
-  <meta name="twitter:url" content="http://www.vegansociety.com/shop" />
-  <meta property="og:url" content="http://www.vegansociety.com/shop" />
-  <meta name="generator" content="Drupal 7 (http://drupal.org)" />
-  <meta name="twitter:title" content="Shop" />
-  <meta property="og:title" content="Shop" />
   <meta name="description" content="Support our work while discovering exciting new vegan products." />
-  <meta content="Shop" about="/shop" property="dc:title" />
-  <meta property="og:description" content="Support our work while discovering exciting new vegan products." />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:creator:id" content="21754399" />
-  <meta name="twitter:creator" content="@TheVeganSociety" />
-  <meta name="twitter:description" content="Support our work while discovering exciting new vegan products." />
-  <title>Shop | The Vegan Society</title>
-  <link type="text/css" rel="stylesheet" href="http://www.vegansociety.com/sites/default/files/css/css_pbm0lsQQJ7A7WCCIMgxLho6mI_kBNgznNUWmTWcnfoE.css" media="all" />
-  <link type="text/css" rel="stylesheet" href="http://www.vegansociety.com/sites/default/files/css/css_pgxGUDLKPcdSFHbd8vilXpRtGYjs41VVuqmw5K-XOnw.css" media="all" />
-  <link type="text/css" rel="stylesheet" href="http://www.vegansociety.com/sites/default/files/css/css_JD5d6-f9pFahgcvul2_VFHSZjG-CUDSW4hpXoJAe27k.css" media="all" />
+  <%= stylesheet_link_tag 'origin/css_pbm0l', media: 'all' %>
+  <%= stylesheet_link_tag 'origin/css_pgxGU', media: 'all' %>
+  <%= stylesheet_link_tag 'origin/css_JD5d6-', media: 'all' %>
   <style type="text/css" media="all">
     <!--/*--><![CDATA[/*><!--*/
     #sliding-popup.sliding-popup-bottom{background:#ffdf45;}#sliding-popup .popup-content #popup-text h2,#sliding-popup .popup-content #popup-text p{color:#666666 !important;}
-
     /*]]>*/-->
   </style>
-  <link type="text/css" rel="stylesheet" href="http://www.vegansociety.com/sites/default/files/css/css_UBtNMOXSXafQEGnHcYRRCUwAjaYNfqvpK8vFDMgfVNU.css" media="all" />
-  <link type="text/css" rel="stylesheet" href="http://www.vegansociety.com/sites/default/files/css/css_yvjdhfl--_bgrXwN6Bd457EFBf7Odp2BZDn5U2o0u_E.css" media="all" />
+  <%= stylesheet_link_tag 'origin/css_UBtNMO', media: 'all' %>
+  <%= stylesheet_link_tag 'origin/css_yvjdhf', media: 'all' %>
+  <!--[if lte IE 7]>
+  <link type="text/css" rel="stylesheet" href="http://www.vegansociety.com/sites/all/themes/the_vegan_society/css/ie.css?nak35f" media="all" />
+  <![endif]-->
+  <!--[if IE 6]>
+  <link type="text/css" rel="stylesheet" href="http://www.vegansociety.com/sites/all/themes/the_vegan_society/css/ie6.css?nak35f" media="all" />
+  <![endif]-->
+  <%= stylesheet_link_tag 'application', media: 'all' %>
 
-<!--[if lte IE 7]>
-<link type="text/css" rel="stylesheet" href="http://www.vegansociety.com/sites/all/themes/the_vegan_society/css/ie.css?nak35f" media="all" />
-<![endif]-->
+  <!--[if lt IE 9]><%= javascript_include_tag 'origin/respond' %><![endif]-->
+  <%= javascript_include_tag 'origin/js_xAPl0q' %>
+  <%= javascript_include_tag 'origin/js_n7Lw7P' %>
+  <%= javascript_include_tag 'origin/js_KAh8fA' %>
+  <%= javascript_include_tag 'origin/js_b3i2Om' %>
+  <script type="text/javascript">
+    <!--//--><![CDATA[//><!--
+    jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"the_vegan_society","theme_token":"011ODJ0rqYQYhEXl1bXdnlsBU2F-im0X-7t6VbOmuIQ","js":{"sites\/all\/modules\/eu-cookie-compliance\/js\/eu_cookie_compliance.js":1,"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"misc\/jquery.cookie.js":1,"misc\/jquery.form.js":1,"misc\/ajax.js":1,"sites\/all\/libraries\/colorbox\/jquery.colorbox-min.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox.js":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.js":1,"sites\/all\/modules\/dynamic_banner\/js\/banner.js":1,"sites\/all\/modules\/geo_filter\/geo_filter.js":1,"sites\/all\/modules\/custom_search\/js\/custom_search.js":1,"sites\/all\/modules\/views\/js\/base.js":1,"misc\/progress.js":1,"sites\/all\/modules\/google_analytics\/googleanalytics.js":1,"sites\/all\/modules\/views\/js\/ajax_view.js":1,"0":1,"sites\/all\/themes\/the_vegan_society\/assets\/js\/plugins\/flexslider\/jquery.flexslider-min.js":1,"sites\/all\/themes\/the_vegan_society\/assets\/js\/libraries\/sticky-pagination-fixer.js":1,"sites\/all\/themes\/the_vegan_society\/assets\/js\/init.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/comment\/comment.css":1,"sites\/all\/modules\/date\/date_api\/date.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"sites\/all\/modules\/ubercart\/uc_order\/uc_order.css":1,"sites\/all\/modules\/ubercart\/uc_product\/uc_product.css":1,"sites\/all\/modules\/ubercart\/uc_store\/uc_store.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/dynamic_banner\/css\/banner.css":1,"0":1,"sites\/all\/modules\/eu-cookie-compliance\/css\/eu_cookie_compliance.css":1,"sites\/all\/modules\/custom_search\/custom_search.css":1,"sites\/all\/themes\/the_vegan_society\/assets\/css\/styles.css":1,"sites\/all\/themes\/the_vegan_society\/assets\/js\/plugins\/flexslider\/flexslider.css":1,"sites\/all\/themes\/the_vegan_society\/css\/ie.css":1,"sites\/all\/themes\/the_vegan_society\/css\/ie6.css":1}},"colorbox":{"opacity":"0.85","current":"{current} of {total}","previous":"\u00ab Prev","next":"Next \u00bb","close":"Close","maxWidth":"98%","maxHeight":"98%","fixed":true,"mobiledetect":true,"mobiledevicewidth":"480px"},"eu_cookie_compliance":{"popup_enabled":1,"popup_agreed_enabled":0,"popup_hide_agreed":0,"popup_clicking_confirmation":1,"popup_html_info":"\n\u003Cdiv\u003E\n  \u003Cdiv class =\u0022popup-content info\u0022\u003E\n    \u003Cdiv id=\u0022popup-text\u0022\u003E\n      \u003Cp\u003EWe use cookies on this site to enhance your user experience. By clicking any link on this page you are giving your consent for us to set cookies.\u003C\/p\u003E\n    \u003C\/div\u003E\n    \u003Cdiv id=\u0022popup-buttons\u0022\u003E\n      \u003Cbutton type=\u0022button\u0022 class=\u0022agree-button\u0022\u003EYes, I agree\u003C\/button\u003E\n      \u003Cbutton type=\u0022button\u0022 class=\u0022find-more-button\u0022\u003ENo, I want to find out more\u003C\/button\u003E\n    \u003C\/div\u003E\n  \u003C\/div\u003E\n\u003C\/div\u003E\n","popup_html_agreed":"\u003Cdiv\u003E\n  \u003Cdiv class =\u0022popup-content agreed\u0022\u003E\n    \u003Cdiv id=\u0022popup-text\u0022\u003E\n      \u003Cp\u003EThank you for accepting cookies. You can now hide this message or find out more about cookies.\u003C\/p\u003E\n    \u003C\/div\u003E\n    \u003Cdiv id=\u0022popup-buttons\u0022\u003E\n      \u003Cbutton type=\u0022button\u0022 class=\u0022hide-popup-button\u0022\u003EHide this message\u003C\/button\u003E\n      \u003Cbutton type=\u0022button\u0022 class=\u0022find-more-button\u0022 \u003EMore information on cookies\u003C\/button\u003E\n    \u003C\/div\u003E\n  \u003C\/div\u003E\n\u003C\/div\u003E","popup_height":"auto","popup_width":"100%","popup_delay":1000,"popup_link":"\/privacy-policy","popup_position":0,"popup_language":"en"},"custom_search":{"form_target":"_self","solr":0},"views":{"ajax_path":"\/views\/ajax","ajaxViews":{"views_dom_id:c2eee8443745336ee3b089a0ee56b573":{"view_name":"news","view_display_id":"block_1","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"c2eee8443745336ee3b089a0ee56b573","pager_element":"0"},"views_dom_id:e4307c425b1a790359fb2f8947773e82":{"view_name":"downloads","view_display_id":"block","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"e4307c425b1a790359fb2f8947773e82","pager_element":0},"views_dom_id:1659b19d8311f3aab82e775b18e46cda":{"view_name":"trademark_search","view_display_id":"block","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"1659b19d8311f3aab82e775b18e46cda","pager_element":"0"},"views_dom_id:050acdd9f4742fa27d0f1d476dadeeed":{"view_name":"company_search","view_display_id":"block","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"050acdd9f4742fa27d0f1d476dadeeed","pager_element":0},"views_dom_id:0e866cac24307fe5437f36d01f2b6cf1":{"view_name":"services_search","view_display_id":"block","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"0e866cac24307fe5437f36d01f2b6cf1","pager_element":"0"},"views_dom_id:f4c6d96fa34465c5d208036b9908e394":{"view_name":"previous_campaigns","view_display_id":"block_1","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"f4c6d96fa34465c5d208036b9908e394","pager_element":"0"}}},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip"}});
+    //--><!]]>
+  </script>
+  <%= javascript_include_tag 'origin/html5' %>
+  <%= javascript_include_tag 'application' %>
 
-<!--[if IE 6]>
-<link type="text/css" rel="stylesheet" href="http://www.vegansociety.com/sites/all/themes/the_vegan_society/css/ie6.css?nak35f" media="all" />
-<![endif]-->
-<!--[if lt IE 9]><script type='text/javascript' src="/sites/all/themes/the_vegan_society/assets/js/libraries/respond.min.js"></script> <![endif]-->
-<script type="text/javascript" src="http://www.vegansociety.com/sites/default/files/js/js_xAPl0qIk9eowy_iS9tNkCWXLUVoat94SQT48UBCFkyQ.js"></script>
-<script type="text/javascript" src="http://www.vegansociety.com/sites/default/files/js/js_n7Lw7PPN-xdTJcPryjHWWwcX-NVLfdUvNwg6eFAlc8I.js"></script>
-<script type="text/javascript" src="http://www.vegansociety.com/sites/default/files/js/js_KAh8fAAT8T76bWi-zs9DLsnHRDsa8S0vtJZPioEaLtQ.js"></script>
-<script type="text/javascript">
-<!--//--><![CDATA[//><!--
-var _gaq = _gaq || [];_gaq.push(["_setAccount", "UA-11016116-1"]);_gaq.push(["_trackPageview"]);(function() {var ga = document.createElement("script");ga.type = "text/javascript";ga.async = true;ga.src = ("https:" == document.location.protocol ? "https://ssl" : "http://www") + ".google-analytics.com/ga.js";var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(ga, s);})();
-//--><!]]>
-</script>
-<script type="text/javascript" src="http://www.vegansociety.com/sites/default/files/js/js_b3i2OmkULE-MWsyWzc0EVOwfVUQxerYoixt7sDwlmGQ.js"></script>
-<script type="text/javascript">
-<!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"the_vegan_society","theme_token":"011ODJ0rqYQYhEXl1bXdnlsBU2F-im0X-7t6VbOmuIQ","js":{"sites\/all\/modules\/eu-cookie-compliance\/js\/eu_cookie_compliance.js":1,"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"misc\/jquery.cookie.js":1,"misc\/jquery.form.js":1,"misc\/ajax.js":1,"sites\/all\/libraries\/colorbox\/jquery.colorbox-min.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox.js":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.js":1,"sites\/all\/modules\/dynamic_banner\/js\/banner.js":1,"sites\/all\/modules\/geo_filter\/geo_filter.js":1,"sites\/all\/modules\/custom_search\/js\/custom_search.js":1,"sites\/all\/modules\/views\/js\/base.js":1,"misc\/progress.js":1,"sites\/all\/modules\/google_analytics\/googleanalytics.js":1,"sites\/all\/modules\/views\/js\/ajax_view.js":1,"0":1,"sites\/all\/themes\/the_vegan_society\/assets\/js\/plugins\/flexslider\/jquery.flexslider-min.js":1,"sites\/all\/themes\/the_vegan_society\/assets\/js\/libraries\/sticky-pagination-fixer.js":1,"sites\/all\/themes\/the_vegan_society\/assets\/js\/init.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/comment\/comment.css":1,"sites\/all\/modules\/date\/date_api\/date.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"sites\/all\/modules\/ubercart\/uc_order\/uc_order.css":1,"sites\/all\/modules\/ubercart\/uc_product\/uc_product.css":1,"sites\/all\/modules\/ubercart\/uc_store\/uc_store.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/dynamic_banner\/css\/banner.css":1,"0":1,"sites\/all\/modules\/eu-cookie-compliance\/css\/eu_cookie_compliance.css":1,"sites\/all\/modules\/custom_search\/custom_search.css":1,"sites\/all\/themes\/the_vegan_society\/assets\/css\/styles.css":1,"sites\/all\/themes\/the_vegan_society\/assets\/js\/plugins\/flexslider\/flexslider.css":1,"sites\/all\/themes\/the_vegan_society\/css\/ie.css":1,"sites\/all\/themes\/the_vegan_society\/css\/ie6.css":1}},"colorbox":{"opacity":"0.85","current":"{current} of {total}","previous":"\u00ab Prev","next":"Next \u00bb","close":"Close","maxWidth":"98%","maxHeight":"98%","fixed":true,"mobiledetect":true,"mobiledevicewidth":"480px"},"eu_cookie_compliance":{"popup_enabled":1,"popup_agreed_enabled":0,"popup_hide_agreed":0,"popup_clicking_confirmation":1,"popup_html_info":"\n\u003Cdiv\u003E\n  \u003Cdiv class =\u0022popup-content info\u0022\u003E\n    \u003Cdiv id=\u0022popup-text\u0022\u003E\n      \u003Cp\u003EWe use cookies on this site to enhance your user experience. By clicking any link on this page you are giving your consent for us to set cookies.\u003C\/p\u003E\n    \u003C\/div\u003E\n    \u003Cdiv id=\u0022popup-buttons\u0022\u003E\n      \u003Cbutton type=\u0022button\u0022 class=\u0022agree-button\u0022\u003EYes, I agree\u003C\/button\u003E\n      \u003Cbutton type=\u0022button\u0022 class=\u0022find-more-button\u0022\u003ENo, I want to find out more\u003C\/button\u003E\n    \u003C\/div\u003E\n  \u003C\/div\u003E\n\u003C\/div\u003E\n","popup_html_agreed":"\u003Cdiv\u003E\n  \u003Cdiv class =\u0022popup-content agreed\u0022\u003E\n    \u003Cdiv id=\u0022popup-text\u0022\u003E\n      \u003Cp\u003EThank you for accepting cookies. You can now hide this message or find out more about cookies.\u003C\/p\u003E\n    \u003C\/div\u003E\n    \u003Cdiv id=\u0022popup-buttons\u0022\u003E\n      \u003Cbutton type=\u0022button\u0022 class=\u0022hide-popup-button\u0022\u003EHide this message\u003C\/button\u003E\n      \u003Cbutton type=\u0022button\u0022 class=\u0022find-more-button\u0022 \u003EMore information on cookies\u003C\/button\u003E\n    \u003C\/div\u003E\n  \u003C\/div\u003E\n\u003C\/div\u003E","popup_height":"auto","popup_width":"100%","popup_delay":1000,"popup_link":"\/privacy-policy","popup_position":0,"popup_language":"en"},"custom_search":{"form_target":"_self","solr":0},"views":{"ajax_path":"\/views\/ajax","ajaxViews":{"views_dom_id:c2eee8443745336ee3b089a0ee56b573":{"view_name":"news","view_display_id":"block_1","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"c2eee8443745336ee3b089a0ee56b573","pager_element":"0"},"views_dom_id:e4307c425b1a790359fb2f8947773e82":{"view_name":"downloads","view_display_id":"block","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"e4307c425b1a790359fb2f8947773e82","pager_element":0},"views_dom_id:1659b19d8311f3aab82e775b18e46cda":{"view_name":"trademark_search","view_display_id":"block","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"1659b19d8311f3aab82e775b18e46cda","pager_element":"0"},"views_dom_id:050acdd9f4742fa27d0f1d476dadeeed":{"view_name":"company_search","view_display_id":"block","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"050acdd9f4742fa27d0f1d476dadeeed","pager_element":0},"views_dom_id:0e866cac24307fe5437f36d01f2b6cf1":{"view_name":"services_search","view_display_id":"block","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"0e866cac24307fe5437f36d01f2b6cf1","pager_element":"0"},"views_dom_id:f4c6d96fa34465c5d208036b9908e394":{"view_name":"previous_campaigns","view_display_id":"block_1","view_args":"","view_path":"node\/9","view_base_path":null,"view_dom_id":"f4c6d96fa34465c5d208036b9908e394","pager_element":"0"}}},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip"}});
-//--><!]]>
-</script>
-<script type='text/javascript' src='https://html5shim.googlecode.com/svn/trunk/html5.js?ver=3.5.2'></script>
-<meta name="viewport" content="initial-scale=1.0, width=device-width"/>
+  <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
+  <%= csrf_meta_tags %>
 </head>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-9 node-type-list-shop footer-columns">
 
