补上缺少的文件

--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -15,14 +15,14 @@
   src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100italic-webfont.eot?#iefix") format("embedded-opentype"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100italic-webfont.woff") format("woff"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100italic-webfont.ttf") format("truetype"),
-    url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100italic-webfont.svg#museo_sans100_italic") format("svg");
+  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100italic-webfont.svg#museo_sans100_italic") format("svg");
   font-weight:normal;
   font-style:normal;
 }
 @font-face{
   font-family:'Museo Sans 300';
   src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.eot");
-src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.eot?#iefix") format("embedded-opentype"),
+  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.eot?#iefix") format("embedded-opentype"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.woff") format("woff"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.ttf") format("truetype"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.svg#museo_sans300") format("svg");
@@ -35,7 +35,7 @@ src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_
   src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300italic-webfont.eot?#iefix") format("embedded-opentype"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300italic-webfont.woff") format("woff"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300italic-webfont.ttf") format("truetype"),
-    url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300italic-webfont.svg#museo_sans300_italic") format("svg");
+  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300italic-webfont.svg#museo_sans300_italic") format("svg");
   font-weight:normal;
   font-style:normal;
 }
@@ -45,7 +45,7 @@ src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_
   src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500-webfont.eot?#iefix") format("embedded-opentype"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500-webfont.woff") format("woff"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500-webfont.ttf") format("truetype"),
-    url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500-webfont.svg#museo_sans500") format("svg");
+  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500-webfont.svg#museo_sans500") format("svg");
   font-weight:normal;
   font-style:normal;
 }
@@ -55,17 +55,17 @@ src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_
   src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500italic-webfont.eot?#iefix") format("embedded-opentype"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500italic-webfont.woff") format("woff"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500italic-webfont.ttf") format("truetype"),
-    url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500italic-webfont.svg#museo_sans500_italic") format("svg");
+  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500italic-webfont.svg#museo_sans500_italic") format("svg");
   font-weight:normal;
   font-style:normal;
 }
 @font-face{
   font-family:'Museo Sans 700';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700-webfont.ttf") format("truetype"),
-    url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700-webfont.svg#museo_sans700") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museosans-700-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museosans-700-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museosans-700-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museosans-700-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museosans-700-webfont.svg" %>#museo_sans700') format("svg");
   font-weight:normal;
   font-style:normal;
 }
@@ -75,17 +75,17 @@ src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_
   src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700italic-webfont.eot?#iefix") format("embedded-opentype"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700italic-webfont.woff") format("woff"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700italic-webfont.ttf") format("truetype"),
-    url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700italic-webfont.svg#museo_sans700_italic") format("svg");
+  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700italic-webfont.svg#museo_sans700_italic") format("svg");
   font-weight:normal;
   font-style:normal;
 }
 @font-face{
   font-family:'Museo Slab 700';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700-webfont.svg#museo_slab700") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museoslab-700-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museoslab-700-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museoslab-700-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museoslab-700-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museoslab-700-webfont.svg" %>#museo_sans700') format("svg");
   font-weight:normal;
   font-style:normal;
 }
@@ -95,7 +95,7 @@ src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_
   src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700italic-webfont.eot?#iefix") format("embedded-opentype"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700italic-webfont.woff") format("woff"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700italic-webfont.ttf") format("truetype"),
-    url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700italic-webfont.svg#museo_slab700_italic") format("svg");
+  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700italic-webfont.svg#museo_slab700_italic") format("svg");
   font-weight:normal;
   font-style:normal;
 }
@@ -105,7 +105,7 @@ src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_
   src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900-webfont.eot?#iefix") format("embedded-opentype"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900-webfont.woff") format("woff"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900-webfont.ttf") format("truetype"),
-    url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900-webfont.svg#museo_slab900") format("svg");
+  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900-webfont.svg#museo_slab900") format("svg");
   font-weight:normal;
   font-style:normal;
 }
@@ -115,7 +115,7 @@ src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_
   src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900italic-webfont.eot?#iefix") format("embedded-opentype"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900italic-webfont.woff") format("woff"),
   url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900italic-webfont.ttf") format("truetype"),
-    url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900italic-webfont.svg#museo_slab900_italic") format("svg");
+  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900italic-webfont.svg#museo_slab900_italic") format("svg");
   font-weight:normal;
   font-style:normal;
 }
@@ -781,7 +781,7 @@ textarea{
 .social-media__icon.google-plus,
 .social-media__icon.you-tube,
 .social-media__icon.instagram{
-  background-image:url('/sites/all/themes/the_vegan_society/assets/images/icons/social-s9d8c864714.png');
+  background-image:url('<%= image_url "origin/social-s9d8c864714.png" %>');
   background-repeat:no-repeat;
 }
 html{
@@ -2495,7 +2495,7 @@ textarea{
   -o-transform:skewY(-0.5deg) translate3d(0,0,0);
   -webkit-transform:skewY(-0.5deg) translate3d(0,0,0);
   transform:skewY(-0.5deg) translate3d(0,0,0);
-  background:#ff9e16 url('/sites/all/themes/the_vegan_society/assets/images/home/take-action.jpg?1380787410') center center no-repeat;
+  background:#ff9e16 url('<%= image_url "origin/take-action.jpg" %>') center center no-repeat;
   -moz-background-size:cover;
   -o-background-size:cover;
   -webkit-background-size:cover;
@@ -4683,11 +4683,11 @@ h2,h3{
 }
 @font-face{
   font-family:'flexslider-icon';
-  src:url(/sites/all/themes/the_vegan_society/assets/js/plugins/flexslider/fonts/flexslider-icon.eot);
-src:url(/sites/all/themes/the_vegan_society/assets/js/plugins/flexslider/fonts/flexslider-icon.eot?#iefix) format('embedded-opentype'),
-url(/sites/all/themes/the_vegan_society/assets/js/plugins/flexslider/fonts/flexslider-icon.woff) format('woff'),
-url(/sites/all/themes/the_vegan_society/assets/js/plugins/flexslider/fonts/flexslider-icon.ttf) format('truetype'),
-  url(/sites/all/themes/the_vegan_society/assets/js/plugins/flexslider/fonts/flexslider-icon.svg#flexslider-icon) format('svg');
+  src:url('<%= image_url "origin/flexslider-icon.eot" %>');
+src:url('<%= image_url "origin/flexslider-icon.eot" %>+?#iefix') format('embedded-opentype'),
+url('<%= image_url "origin/flexslider-icon.woff" %>') format('woff'),
+url('<%= image_url "origin/flexslider-icon.ttf" %>') format('truetype'),
+  url('<%= image_url "origin/flexslider-icon.svg" %>#flexslider-icon') format('svg');
   font-weight:normal;
   font-style:normal;
   ;
