--- a/app/assets/stylesheets/origin/css_pbm0l.css.erb
+++ b/app/assets/stylesheets/origin/css_pbm0l.css.erb
@@ -47,9 +47,9 @@ html.js .js-hide{display:none;}
 
 ul.menu{border:none;list-style:none;text-align:left;}
 ul.menu li{margin:0 0 0 0.5em;}
-ul li.expanded{list-style-image:url(/misc/menu-expanded.png);list-style-type:circle;}
-ul li.collapsed{list-style-image:url(/misc/menu-collapsed.png);list-style-type:disc;}
-ul li.leaf{list-style-image:url(/misc/menu-leaf.png);list-style-type:square;}
+ul li.expanded{list-style-image:url('<%= image_url "origin/menu-expanded.png" %>');list-style-type:circle;}
+ul li.collapsed{list-style-image:url('<%= image_url "origin/menu-collapsed.png" %>');list-style-type:disc;}
+ul li.leaf{list-style-image:url('<%= image_url "origin/menu-leaf.png" %>');list-style-type:square;}
 li.expanded,
 li.collapsed,
 li.leaf{padding:0.2em 0.5em 0 0;margin:0;}
