--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -115,7 +115,7 @@
   src:url('<%= image_url "origin/exljbris_-_museoslab-900italic-webfont.eot" %>?#iefix') format("embedded-opentype"),
   url('<%= image_url "origin/exljbris_-_museoslab-900italic-webfont.woff" %>') format("woff"),
   url('<%= image_url "origin/exljbris_-_museoslab-900italic-webfont.ttf" %>') format("truetype"),
-  url('<%= image_url "origin/exljbris_-_museoslab-900italic-webfont.svg" %>#museo_slab900_italic) format("svg");
+  url('<%= image_url "origin/exljbris_-_museoslab-900italic-webfont.svg" %>#museo_slab900_italic') format("svg");
   font-weight:normal;
   font-style:normal;
 }
