--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -44,210 +44,195 @@
             </h2>
 
 
-            <p>
-              We're here to help you 'try vegan' for a single week or month.   </p>
-              <a href="/try-vegan/get-support" class="button try-it__button">Go!</a>
-            </aside>
+            <p>We're here to help you 'try vegan' for a single week or month.   </p>
+            <a href="/try-vegan/get-support" class="button try-it__button">Go!</a>
+          </aside>
 
-            <div class="page-content">
-              <div class="home-search__panel">
-                <div class="home-search">
-                  <h3 class="home-search__title">
-                    <a href="/whats-new/campaigns/love-vegan">Love Vegan</a>
-                  </h3>
+          <div class="page-content">
+            <div class="home-search__panel">
+              <div class="home-search">
+                <h3 class="home-search__title">
+                  <a href="/whats-new/campaigns/love-vegan">Love Vegan</a>
+                </h3>
+                <p>
+                  It’s not just vegans who love vegan living. It’s for everyone.          
+                </p>
+                <a href="/whats-new/campaigns/love-vegan" class="button take-action__button">Love</a>
+              </div>
+
+
+              <form class="home-search" action="/recipe-search" method="get">
+                <fieldset>
+                  <label class="home-search__title">
+                    <a href="/resources/recipes">Recipes</a>
+                  </label>
                   <p>
-                    It’s not just vegans who love vegan living. It’s for everyone.          
+                    We're about to rock your world with mind-blowing vegan food!    
                   </p>
-                  <a href="/whats-new/campaigns/love-vegan" class="button take-action__button">Love</a>
-                </div>
-
-
-                <form class="home-search" action="/recipe-search" method="get">
-                  <fieldset>
-                    <label class="home-search__title">
-                      <a href="/resources/recipes">Recipes</a>
-                    </label>
-                    <p>
-                      We're about to rock your world with mind-blowing vegan food!    
-                    </p>
-                    <div class="form-item">
-                      <input type="text" name="combine" placeholder="Recipe">
-                    </div>
-                    <button class="button quick-search__button" type="submit">Search</button>
-                  </fieldset>
-                </form>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="container">
-            <div class="block-list list1">
-              <div class="region region-content">
-
-
-                <div id="node-40" class="node node-page node-full clearfix" about="/one-world-many-lives-our-choice" typeof="foaf:Document">
-
-                  <div class="content clearfix">
-
+                  <div class="form-item">
+                    <input type="text" name="combine" placeholder="Recipe">
                   </div>
-
-                </div>
-              </div>
+                  <button class="button quick-search__button" type="submit">Search</button>
+                </fieldset>
+              </form>
             </div>
           </div>
 
-          <div class="container">
-            <div class="block-list list1">
+        </div>
 
-              <div class="block-list__panel">
-                <a href="/take-action/donate/donate-just-%C2%A35-month">
-                  <%= image_tag "origin/5permonth_724x352.jpg", width: "420", draggable: "true", typeof: "foaf:Image" %>
-                </a>
-                <h2 class="block-list__title">
-                  <a href="/take-action/donate/donate-just-%C2%A35-month">Donate just £5 a month</a>
-                </h2>
-                <p class="block-list__excerpt">
-                  Help change the world for £1.25 a week, the price of a cup of coffee.        
-                </p>
+        <div class="container">
+          <div class="block-list list1">
+            <div class="region region-content">
+
+
+              <div id="node-40" class="node node-page node-full clearfix" about="/one-world-many-lives-our-choice" typeof="foaf:Document">
+
+                <div class="content clearfix">
+
+                </div>
+
               </div>
+            </div>
+          </div>
+        </div>
 
-              <div class="block-list__panel">
-                <a href="/try-vegan/why-go-vegan">
-                  <%= image_tag "origin/WhyGoVegan_724x352.jpg", width: "420", draggable: "true", typeof: "foaf:Image" %>
-                </a>
-                <h2 class="block-list__title">
-                  <a href="/try-vegan/why-go-vegan">Why go vegan?</a>
-                </h2>
-                <p class="block-list__excerpt">
-                  Healthier, greener, kinder to animals and to our planet's future.       
-                </p>
+        <div class="container">
+          <div class="block-list list1">
+
+            <div class="block-list__panel">
+              <a href="/take-action/donate/donate-just-%C2%A35-month">
+                <%= image_tag "origin/5permonth_724x352.jpg", width: "420", draggable: "true", typeof: "foaf:Image" %>
+              </a>
+              <h2 class="block-list__title">
+                <a href="/take-action/donate/donate-just-%C2%A35-month">Donate just £5 a month</a>
+              </h2>
+              <p class="block-list__excerpt">
+                Help change the world for £1.25 a week, the price of a cup of coffee.        
+              </p>
+            </div>
+
+            <div class="block-list__panel">
+              <a href="/try-vegan/why-go-vegan">
+                <%= image_tag "origin/WhyGoVegan_724x352.jpg", width: "420", draggable: "true", typeof: "foaf:Image" %>
+              </a>
+              <h2 class="block-list__title">
+                <a href="/try-vegan/why-go-vegan">Why go vegan?</a>
+              </h2>
+              <p class="block-list__excerpt">
+                Healthier, greener, kinder to animals and to our planet's future.       
+              </p>
+            </div>
+
+            <div class="block-list__panel">
+              <a href="/try-vegan/definition-veganism">
+                <%= image_tag "origin/Definition_724x352.jpg", width: "420", draggable: "true", typeof: "foaf:Image" %>
+              </a>
+              <h2 class="block-list__title">
+                <a href="/try-vegan/definition-veganism">Definition of veganism</a>
+              </h2>
+              <p class="block-list__excerpt">
+                What is a vegan and vegan food? What does veganism mean?      
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="take-action">
+      <div class="skew">    
+        <div class="container">
+
+          <aside class="page-sidebar--right">
+            <h2 class="take-action__title">
+              <a href="/take-action">Take action</a>
+            </h2>
+            <p class="take-action__excerpt take-action__intro">
+              There are many different things you can do to help advance veganism in a positive and significant way.       
+            </p>
+          </aside>
+
+          <div class="page-content">
+            <div class="take-action__inner-container">
+
+              <div class="take-action__panel">
+                <h3 class="take-action__sub-title">
+                  <a href="/take-action/donate">Donate</a>
+                </h3>
+                <p class="take-action__excerpt">Big or small, donations are vital for our work around the globe.   </p>
+                <a href="/take-action/donate" class="button take-action__button">Give</a>
               </div>
-
-              <div class="block-list__panel">
-                <a href="/try-vegan/definition-veganism">
-                  <%= image_tag "origin/Definition_724x352.jpg", width: "420", draggable: "true", typeof: "foaf:Image" %>
-                </a>
-                <h2 class="block-list__title">
-                  <a href="/try-vegan/definition-veganism">Definition of veganism</a>
-                </h2>
-                <p class="block-list__excerpt">
-                  What is a vegan and vegan food? What does veganism mean?      
-                </p>
+              <div class="take-action__panel">
+                <h3 class="take-action__sub-title">
+                  <a href="/take-action/join-us">Join us</a>
+                </h3>
+                <p class="take-action__excerpt">Become a member, united we are stronger.</p>
+                <a href="/take-action/join-us" class="button take-action__button">Join</a>
+              </div>
+              <div class="take-action__panel">
+                <h3 class="take-action__sub-title">
+                  <a href="/shop">Shop</a>
+                </h3>
+                <p class="take-action__excerpt">Support our work while discovering exciting new vegan products.    </p>
+                <a href="/shop" class="button take-action__button">Shop</a>
+              </div>
+              <div class="take-action__panel">
+                <h3 class="take-action__sub-title">
+                  <a href="/take-action/volunteer">Volunteer</a>
+                </h3>
+                <p class="take-action__excerpt">There are a variety of ways to volunteer with us.   </p>
+                <a href="/take-action/volunteer" class="button take-action__button volunteer-sign-up">Sign up</a>
               </div>
             </div>
           </div>
 
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="take-action">
-        <div class="skew">    
-          <div class="container">
+    <section class="make-it-official">
+      <div class="skew">    
+        <div class="container">
 
-            <aside class="page-sidebar--right">
-              <h2 class="take-action__title">
-                <a href="/take-action">
-                  Take action</a>
-                </h2>
-                <p class="take-action__excerpt take-action__intro">
-                  There are many different things you can do to help advance veganism in a positive and significant way.       </p>
-                </aside>
+          <aside class="page-sidebar">
+            <h2 class="make-it-official__title">
+              <a href="/your-business">Make it official</a>
+            </h2>
+            <p class="make-it-official__excerpt make-it-official__intro">
+              The international Vegan Trademark is the leading symbol of vegan-friendly products and services, with over 16,000 registered so far, more than any other vegan certification body.    
+            </p>
+          </aside>
 
-                <div class="page-content">
-                  <div class="take-action__inner-container">
+          <div class="page-content">
 
-                    <div class="take-action__panel">
-                      <h3 class="take-action__sub-title">
-                        <a href="/take-action/donate">Donate</a>
-                      </h3>
-                      <p class="take-action__excerpt">Big or small, donations are vital for our work around the globe.   </p>
-                      <a href="/take-action/donate" class="button take-action__button">Give</a>
-                    </div>
-                    <div class="take-action__panel">
-                      <h3 class="take-action__sub-title">
-                        <a href="/take-action/join-us">Join us</a>
-                      </h3>
-                      <p class="take-action__excerpt">Become a member, united we are stronger.</p>
-                      <a href="/take-action/join-us" class="button take-action__button">Join</a>
-                    </div>
-                    <div class="take-action__panel">
-                      <h3 class="take-action__sub-title">
-                        <a href="/shop">Shop</a>
-                      </h3>
-                      <p class="take-action__excerpt">Support our work while discovering exciting new vegan products.    </p>
-                      <a href="/shop" class="button take-action__button">Shop</a>
-                    </div>
-                    <div class="take-action__panel">
-                      <h3 class="take-action__sub-title">
-                        <a href="/take-action/volunteer">Volunteer</a>
-                      </h3>
-                      <p class="take-action__excerpt">There are a variety of ways to volunteer with us.   </p>
-                      <a href="/take-action/volunteer" class="button take-action__button volunteer-sign-up">Sign up</a>
-                    </div>
-                  </div>
-                </div>
+            <%= image_tag "origin/trademark-logo.png", class: "trademark-logo" %>
+            <div class="make-it-official__inner-container">
 
+              <div class="make-it-official__panel">
+                <h3 class="make-it-official__sub-title">
+                  <a href="/your-business/trademark-showcase">Trademark showcase</a>
+                </h3>
+                <p>What our clients are saying about the global Vegan Trademark. </p>
+                <a href="/your-business/trademark-showcase" class="button make-it-official__button">Listen</a>
+              </div>
+              <div class="make-it-official__panel">
+                <h3 class="make-it-official__sub-title">
+                  <a href="/your-business/are-you-registered">Are you registered?</a>
+                </h3>
+                <p>The Vegan Trademark is a beacon for attracting new business.</p>
+
+                <a href="/your-business/are-you-registered" class="button make-it-official__button">Register</a>
               </div>
             </div>
-          </section>
-
-          <section class="make-it-official">
-            <div class="skew">    
-              <div class="container">
-
-                <aside class="page-sidebar">
-                  <h2 class="make-it-official__title">
-                    <a href="/your-business">Make it official</a>
-                  </h2>
-                  <p class="make-it-official__excerpt make-it-official__intro">
-                    The international Vegan Trademark is the leading symbol of vegan-friendly products and services, with over 16,000 registered so far, more than any other vegan certification body.    
-                  </p>
-                </aside>
-
-                <div class="page-content">
-
-                  <%= image_tag "origin/trademark-logo.png", class: "trademark-logo" %>
-                  <div class="make-it-official__inner-container">
-
-                    <div class="make-it-official__panel">
-                      <h3 class="make-it-official__sub-title">
-                        <a href="/your-business/trademark-showcase">Trademark showcase</a>
-                      </h3>
-                      <p>What our clients are saying about the global Vegan Trademark. </p>
-                      <a href="/your-business/trademark-showcase" class="button make-it-official__button">Listen</a>
-                    </div>
-                    <div class="make-it-official__panel">
-                      <h3 class="make-it-official__sub-title">
-                        <a href="/your-business/are-you-registered">Are you registered?</a>
-                      </h3>
-                      <p>
-                        The Vegan Trademark is a beacon for attracting new business.</p>
-
-                        <a href="/your-business/are-you-registered" class="button make-it-official__button">Register</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
-            <%= render "info_social" %>
-            <%= render "footer" %>
           </div>
-
-          <div class="mobile-nav-list">
-
-            <ul class="mobile-site-nav"><li class="menu-1092 first"><a href="/whats-new" title="">What's New?</a></li>
-              <li class="menu-1027"><a href="/try-vegan" title="">Try vegan</a></li>
-              <li class="menu-1034"><a href="/take-action" title="">Take action</a></li>
-              <li class="menu-1046"><a href="/resources" title="">Resources</a></li>
-              <li class="menu-1060"><a href="/your-business" title="">Your Business</a></li>
-              <li class="menu-1066"><a href="/society" title="">The Society</a></li>
-              <li class="menu-1150 last"><a href="/shop" title="">Shop</a></li>
-            </ul>
-          </div>   
-          <%= javascript_include_tag 'origin/js_Dpwj9_' %> 
-
         </div>
-
-        <div id="cboxOverlay" style="display: none;"></div><div id="colorbox" class="" role="dialog" tabindex="-1" style="display: none;"><div id="cboxWrapper"><div><div id="cboxTopLeft" style="float: left;"></div><div id="cboxTopCenter" style="float: left;"></div><div id="cboxTopRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxMiddleLeft" style="float: left;"></div><div id="cboxContent" style="float: left;"><div id="cboxTitle" style="float: left;"></div><div id="cboxCurrent" style="float: left;"></div><button type="button" id="cboxPrevious"></button><button type="button" id="cboxNext"></button><button id="cboxSlideshow"></button><div id="cboxLoadingOverlay" style="float: left;"></div><div id="cboxLoadingGraphic" style="float: left;"></div></div><div id="cboxMiddleRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxBottomLeft" style="float: left;"></div><div id="cboxBottomCenter" style="float: left;"></div><div id="cboxBottomRight" style="float: left;"></div></div></div><div style="position: absolute; width: 9999px; visibility: hidden; display: none;"></div></div>
+      </div>
+    </section>
+    <%= render "info_social" %>
+    <%= render "footer" %>
+  </div>
+  <%= render "mobile_nav_list" %>
+  <%= javascript_include_tag 'origin/js_Dpwj9_' %> 
+</div>
+<%= render "cbox_overlay" %>
