增加页面模板

--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -1,1 +1,104 @@
-页面显示
+<div class="site">
+  <div class="site-container">    
+    <div id="skip-link">
+      <a href="#main-content" class="element-invisible element-focusable">Skip to main content</a>
+    </div>
+    <%= render "header" %>
+    <header class="page-title" style="background-image: url('http://www.vegansociety.com/sites/default/files/whats-new.jpg');">
+      <div class="skew">
+        <div class="container">
+          <h1>
+            Love Vegan          
+          </h1>
+        </div>
+      </div>
+    </header>
+    <section class="page basic">  
+      <div class="container">
+
+        <div class="page-content">
+
+          <div class="custom-breadcrumbs">
+            <h2 class="element-invisible">You are here</h2>
+            <div class="breadcrumb"><a href="/">Home</a> » <a href="/whats-new">What's New?</a> » <a href="/whats-new/campaigns">Campaigns</a>
+            </div> » Love Vegan            
+          </div>
+
+          <div class="region region-content">
+
+            <div id="node-766" class="node node-campaign node-promoted node-full clearfix" about="/whats-new/campaigns/love-vegan" typeof="sioc:Item foaf:Document">
+
+              <div class="content clearfix">
+                <div class="field field-name-body field-type-text-with-summary field-label-hidden">
+                  <div class="field-items">
+                    <div class="field-item even" property="content:encoded">
+                      <h2>Set yourself free from stereotypes<a href="/sites/default/files/LV_Kiss.jpg" target="_blank"><img src="/sites/default/files/uploads/LV_Kiss_385.jpg" width="320" height="452" style="float: right;" class="right"></a></h2>
+                      <p>You probably know a vegan. Chances are you’ve talked to them already today. Heck, you may even be sitting behind one right now.</p>
+                      <p>But you’d never have guessed it. There’s no such thing as a 'typical' vegan. There’s no dress code. No lingo. Just a few hundred thousand people who are choosing to live a good life – their own way.</p>
+                      <p>More than that, veganism is actually a protected belief under the Equality Act 2010. So we’re saying our last goodbyes to lettuce sandwiches: a new era of veganism is dawning.</p>
+                      <h2>Fall in love with vegan living</h2>
+                      <p>There’s just something about vegan living that really gets you excited, but you can’t quite put your finger on it. Ready to hear the big secret?</p>
+                      <blockquote><p>"You don’t have to be vegan to love vegan things"</p>
+                      </blockquote>
+                      <p><a href="/sites/default/files/LV_Run.jpg" target="_blank"><img src="/sites/default/files/uploads/LV_Run_385.jpg" width="320" height="452" style="float: left;" class="left"></a>Hundreds of thousands of people already enjoy vegan food, vegan shoes, vegan soap, and vegan pretty much everything. Beginning to replace some non-vegan items with vegan products will see you living your life closer to the values you already hold – and closer to <em>The Vegan Society</em>’s vision of a world in which humans do not exploit other animals. Once you begin, the transition will be a breeze. </p>
+
+                      <h2>Where will your choices take you?</h2>
+                      <p>Many products you love are vegan already. Isn’t it time you experimented with some new stuff? We know you care about animals, the environment, and your health. The great news is that vegan living is getting easier and easier. Look out for over 16,000 products registered with our <a href="/your-business/trademark-showcase" target="_blank">Vegan Trademark</a> worldwide. See at a glance that the product contains no animal ingredients and has not been tested on animals. What’s not to love?</p>
+                      <p>Obviously, if you’re ready to take the plunge and embrace vegan living to the full right away, then three cheers for you! Check our <a href="/resources" target="_blank">Resources</a> section for ideas and support.&nbsp;</p>
+                      <p>But if you’re not about to go vegan anytime soon, don’t let that stop you from bringing the vegan products you know and love into your life more regularly. Then, when the time comes to try going vegan for real, you’ll make it look easy.&nbsp;</p>
+                      <h2>Already smitten?</h2>
+                      <p>Vegans have all the fun. But let’s not keep it to ourselves – we have an entire planet to save.&nbsp;Share the love with everyone you know (hint: by joining our campaign) and help inspire more people to go vegan.&nbsp;</p>
+                      <h2>Join the campaign<a href="/sites/default/files/LV_Eat.jpg" target="_blank"><img src="/sites/default/files/uploads/LV_Eat_385.jpg" width="320" height="452" style="float: right; margin-top: 1px; margin-bottom: 1px;" class="right"></a></h2>
+                      <p>See these posters? They need sharing far and wide on social media. Already, people have been getting in touch with us to say how much they love to eat vegan food and wear vegan lipstick, and (this is the best bit) <em>how they’ll be thinking more about their shopping choices as a result of this campaign</em>. Ka-ching! That’s what we like to hear.</p>
+                      <p>Can you help us to connect with a wider audience? Here’s what we'd love you to do:</p>
+                      <ul><li>save your favourite poster from this page (or all of them if you can’t decide!)</li>
+                        <li>upload them to all your favourite social media channels with your own message</li>
+                        <li>keep us in the loop through&nbsp;our&nbsp;<a href="https://www.facebook.com/TheVeganSociety" target="_blank">Facebook</a>&nbsp;page or&nbsp;<a href="https://twitter.com/TheVeganSociety" target="_blank">tweet</a>&nbsp;with&nbsp;#LoveVegan</li>
+                      </ul><p>Or, simply click the Facebook and Twitter icons below to share a link to this page.&nbsp;</p>
+                      <p>Already shared the posters? Fancy doing more?</p>
+                      <ul><li>Make a <a href="/take-action/donate" target="_blank">donation</a></li>
+                        <li>Become a <a href="/node/4/join-us" target="_blank">member</a></li>
+                        <li><a href="/take-action/volunteer" target="_blank">Volunteer</a> with us</li>
+                      </ul>
+                      <p>Vegan. It’s for everyone. Have you tried it yet?</p>
+                    </div>
+                  </div>
+                </div>  
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <aside class="page-sidebar--right">
+          <div class="sub-nav"> 
+            <div class="region region-sidebar-menu">
+              <h2>What's New?</h2>
+
+              <div class="menu-block-wrapper menu-block-1 menu-name-main-menu parent-mlid-0 menu-level-2">
+                <ul class="menu clearfix"><li class="first expanded active-trail menu-mlid-2030"><a href="/whats-new/campaigns" title="" class="active-trail">Campaigns</a><ul class="menu clearfix"><li class="first leaf active-trail active menu-mlid-2382"><a href="/whats-new/campaigns/love-vegan" title="" class="active-trail active">Love Vegan</a></li>
+                  <li class="leaf menu-mlid-2547"><a href="/node/671/ask-evidence" title="">Ask for Evidence</a></li>
+                  <li class="leaf menu-mlid-1087"><a href="/whats-new/campaigns/70th-anniversary" title="">70th Anniversary</a></li>
+                  <li class="last leaf menu-mlid-1088"><a href="/whats-new/campaigns/enough-food-everyone-if" title="">Enough Food For Everyone IF</a></li>
+                </ul></li>
+                <li class="collapsed menu-mlid-1037"><a href="/whats-new/events" title="">Events</a></li>
+                <li class="last leaf menu-mlid-1916"><a href="/whats-new/jobs" title="">Jobs</a></li>
+              </ul></div>
+            </div>
+          </div>
+          <div class="banner__panel">
+            <div class="region region-sidebar-banners">
+              <div id="banner"><a class="link" href="/shop/supplements"><img class="jpg" alt="The Vegan Shop" src="http://www.vegansociety.com/sites/default/files/banners/VEG1_426_new.png"></a>
+              </div>  
+            </div>
+          </div>        
+        </aside>
+      </div>
+
+    </section>
+    <%= render "info_social" %>
+    <%= render "footer" %>
+  </div>
+  <%= render "mobile_nav_list" %>
+  <%= javascript_include_tag 'origin/js_Dpwj9_' %> 
+</div>
+<%= render "cbox_overlay" %>
